fixed banner on mobile

--- a/assets/main.css
+++ b/assets/main.css
@@ -242,7 +242,7 @@ footer{font-size:0.875em; margin-top:12em; text-align:center;}
     font-size:75%;
   }
   .bottom-right2{
-    font-size:1.65em;
+    font-size:1.2em;
   }
 }
 
